@@ -2,7 +2,7 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'com.gradleup.shadow' version '9.3.1'
-    id 'org.beryx.jlink' version '3.1.3'
+    id 'org.beryx.jlink' version '3.2.1'
 }
 
 group = 'opensource.master_duel_android_adb_user_changer'
@@ -27,7 +27,7 @@ javafx {
 }
 
 application {
-    mainModule = 'opensource.master_duel_android_adb_user_changer.app'
+    mainModule = 'opensource.master_duel_android_adb_user_changer'
     mainClass = 'opensource.master_duel_android_adb_user_changer.Launcher'
 }
 
@@ -80,13 +80,13 @@ tasks.register('universalShadowJar', com.github.jengelman.gradle.plugins.shadow.
 }
 
 jlink {
-    moduleName = 'opensource.master_duel_android_adb_user_changer.app'
-    mergedModuleName = 'opensource.master_duel_android_adb_user_changer.app'
+    moduleName = 'opensource.master_duel_android_adb_user_changer'
     imageName = 'master-duel-android-adb-user-changer'
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
 
     launcher {
         name = 'master-duel-android-adb-user-changer'
+        jvmArgs = ['--enable-native-access=javafx.graphics']
     }
 
     jpackage {
